--- a/Deltamodule/Deltamodule.csproj
+++ b/Deltamodule/Deltamodule.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="akf.cs" />
+    <Compile Include="ContiniousSearch.cs" />
     <Compile Include="FindMaxValue.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
