--- a/Deltamodule/Deltamodule.csproj
+++ b/Deltamodule/Deltamodule.csproj
@@ -58,9 +58,12 @@
     </Win32Resource>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -70,11 +73,14 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="akf.cs" />
-    <Compile Include="ContiniousSearch.cs" />
-    <Compile Include="FindMaxValue.cs" />
+    <Compile Include="ClassForDel\akf.cs" />
+    <Compile Include="ClassForDel\ContiniousSearch.cs" />
+    <Compile Include="ClassForDel\FindMaxValue.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,8 +90,10 @@
     <Compile Include="FormVisualisator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReadandWriteSomeBytes.cs" />
-    <Compile Include="ReadWriteFile.cs" />
+    <Compile Include="ClassForDel\ReadandWriteSomeBytes.cs" />
+    <Compile Include="ClassForDel\ReadToNewFile.cs" />
+    <Compile Include="ClassForDel\ReadWriteFile.cs" />
+    <Compile Include="ClassForDel\UIproduse.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -109,14 +117,17 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WpfControlLibrary1\WpfControlLibrary1.csproj">
+      <Project>{F2F9EF7C-FD6C-4633-8768-C60CF5FCBD56}</Project>
+      <Name>WpfControlLibrary1</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
